--- a/220217.md
+++ b/220217.md
@@ -9,3 +9,12 @@ def itoa(my_int):
     return my_str
 ```
 
+```python
+T=int(input())
+for tc in range(1,T+1):
+    a_str, b_str=input().split()
+    typing=a_str.split(b_str)
+    typing="x".join(typing)
+    print(len(typing))
+```
+
